
=== Removals
Deprecated methods, properties, and features that have been removed in this release.

* `increment-instance-enabled` used by Composed Task Runner has been replaced by `uuid-instance-enabled`.
* `spring.cloud.dataflow.task.use-user-access-token` has been replaced by `spring.cloud.dataflow.task.composedtaskrunner.use-user-access-token`.
* `spring.cloud.dataflow.task.composed-task-runner-uri` has been replaced by `spring.cloud.dataflow.task.composedtaskrunner.uri`.
* `AboutController(StreamDeployer streamDeployer, LauncherRepository launcherRepository, FeaturesProperties featuresProperties,
VersionInfoProperties versionInfoProperties, SecurityStateBean securityStateBean, DataflowMetricsProperties monitoringProperties)` constructor was removed.
* `search` query parameter for filtering  `/tasks/definitions` by task name has been removed.  Use the `taskName` query parameter.
* The following deprecated methods for `JobService` have been removed:
** launch
** getLastJobParameters
** restart
** abandon
** listJobs(int start, int count)
** countJobs
** countJobInstances
** countStepExecutionsForJobExecution
** stopAll
** getStepNamesForJob
* The following deprecated `Converters` have been removed from SCDF: `AbstractDateTimeConverter`, `DateToStringConverter`, and `StringToDateConverter`.  Use the converters provided by Spring Batch.
* `findByTaskNameContainsAndDslTextContains` deprecated method has been removed from `TaskDefinitionRepository`.
* `DockerComposeRule.waitingForService(String serviceName, HealthCheck<Container> healthCheck)` has been replaced by `DockerComposeRule.waitingForService(String serviceName, HealthCheck<Container> healthCheck, ReadableDuration timeout)`.
* The deprecated `rollback(String releaseName, int releaseVersion)` method in SkipperClient has been removed.  Use  `rollback(RollbackRequest rollbackRequest).

=== Breaking Changes
Announce deprecated changes here
